--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Ismailia_3607
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Baker, Samuel White, Sir
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/796
     wikipedia: http://en.wikipedia.org/wiki/Samuel_Baker
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3607#Ismailia
 gutenberg_issued: '2003-01-01'
 gutenberg_type: Text
 identifiers:
